--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -2,6 +2,9 @@
 
 
 {% block head %}
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="mobile-web-app-capable" content="yes">
 <link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
 {% end %}
 
@@ -29,6 +32,7 @@
 
 
 {% block footer %}
+<script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
 <script src="/_static/databench.js?v={{databench_version}}"></script>
 <script src="/analysis.js?v={{version}}"></script>
 {% end %}
