EPFL legal link

--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -31,4 +31,6 @@
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
 <script src="/analysis.js?v={{version}}"></script>
+
+<a href="https://www.epfl.ch/about/overview/overview/regulations-and-guidelines/">EPFL Legal</a>
 {% end %}
