--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -31,4 +31,16 @@
 
 <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
 <script src="analysis.js?v={{version}}"></script>
+
+{% if google_analytics %}
+<script async="" src="https://www.googletagmanager.com/gtag/js?id={{google_analytics}}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{google_analytics}}', { 'anonymize_ip': true });
+</script>
+{% end %}
+
 {% end %}
