--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -15,11 +15,11 @@
 <div style="position:relative;">
   <div id="capture">
     <video style="width:50px; position:absolute;" controls autoplay muted playsinline></video>
-    <canvas style="display: none" width=640 height=480></canvas>
+    <canvas style="display: none" width={{int(640 * resolution)}} height={{int(480 * resolution)}}></canvas>
     <button style="position:absolute; bottom:2px; left:2px;" class="nextCamera"><i class="fas fa-video"></i></button>
   </div>
   <div id="visualization">
-    <canvas style="max-width:100%;" width=320 height=240></canvas>
+    <canvas style="max-width:100%; max-height:98vh;" width=640 height=480></canvas>
   </div>
 </div>
 
