--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -1,4 +1,4 @@
-{% extends "analysis.html" %}
+{% extends "base.html" %}
 
 
 {% block head %}
@@ -7,11 +7,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="mobile-web-app-capable" content="yes">
-<link rel="stylesheet" href="_static/databench.css?v={{databench_version}}">
+<link rel="stylesheet" href="static/style.css?v={{version}}">
 {% end %}
 
 
-{% block analysis %}
+{% block content %}
 <div style="position:relative;">
   <div id="capture">
     <video style="width:50px; position:absolute;" controls autoplay muted playsinline></video>
@@ -34,20 +34,8 @@
 
 
 {% block footer %}
-<a href="//www.epfl.ch/about/overview/overview/regulations-and-guidelines/">EPFL Legal</a>
 
 <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
-<script src="analysis.js?v={{version}}"></script>
-
-{% if google_analytics %}
-<script async="" src="https://www.googletagmanager.com/gtag/js?id={{google_analytics}}"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', '{{google_analytics}}', { 'anonymize_ip': true });
-</script>
-{% end %}
+<script src="static/analysis.js?v={{version}}"></script>
 
 {% end %}
