--- a/openpifpafwebdemo/base.html
+++ b/openpifpafwebdemo/base.html
@@ -23,9 +23,11 @@
         </main>
 
         <footer>
+            <a href="https://github.com/vita-epfl/openpifpafwebdemo">Project on Github</a>.
+            Created by <a href="https://twitter.com/svenkreiss">@svenkreiss</a>.<br />
+            <br />
             Copyright 2019, <a href="https://www.epfl.ch/labs/vita/">VITA lab at EPFL</a>.<br />
             <a href="//www.epfl.ch/about/overview/overview/regulations-and-guidelines/">EPFL Legal</a>.<br />
-            <a href="https://github.com/vita-epfl/openpifpafwebdemo">Project on Github</a>.
             {% block footer %}{% end %}
             <!-- This is v{{version}}. -->
         </footer>
