--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -15,7 +15,7 @@
 <div style="position:relative;">
   <div id="capture">
     <video style="width:50px; position:absolute;" controls autoplay muted playsinline></video>
-    <canvas style="display: none" width={{int(640 * resolution)}} height={{int(480 * resolution)}}></canvas>
+    <canvas style="display: none" width={{width_height[0]}} height={{width_height[1]}}></canvas>
     <button style="position:absolute; bottom:2px; left:2px;" class="nextCamera"><i class="fas fa-video"></i></button>
   </div>
   <div id="visualization">
