--- a/openpifpafwebdemo/client.html
+++ b/openpifpafwebdemo/client.html
@@ -36,6 +36,6 @@
 {% block footer %}
 
 <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
-<script src="static/frontend.js?v={{version}}"></script>
+<script src="static/clientside.js?v={{version}}"></script>
 
 {% end %}
