--- a/openpifpafwebdemo/client.html
+++ b/openpifpafwebdemo/client.html
@@ -25,20 +25,18 @@
 
 <div id="model-selector">
   {% for m in models %}
-    <input name="model" type="radio" id="selector-{{m['name']}}" data-name="{{m['name']}}" data-url="{{m['url']}}" />
-    <label for="selector-{{m['name']}}">{{m['name']}}</label>
+    <input name="model" type="radio" id="selector-{{m['shortname']}}" data-name="{{m['shortname']}}" data-url="{{m['url']}}" />
+    <label for="selector-{{m['shortname']}}">{{m['displayname']}}</label>
   {% end %}
 </div>
 
-<div style="position:relative;">
-  <div id="capture">
-    <video style="width:50px; position:absolute;" controls autoplay muted playsinline></video>
-    <canvas style="display: none" width={{width_height[0]}} height={{width_height[1]}}></canvas>
-    <button style="position:absolute; bottom:2px; left:2px;" class="nextCamera"><i class="fas fa-video"></i></button>
-  </div>
-  <div id="visualization">
-    <canvas style="max-width:100%; max-height:98vh;" width=640 height=480></canvas>
-  </div>
+<div id="capture">
+  <video controls autoplay muted playsinline></video>
+  <button class="nextCamera"><i class="fas fa-video"></i></button>
+  <canvas style="display: none" width={{width_height[0]}} height={{width_height[1]}}></canvas>
+</div>
+<div id="visualization">
+  <canvas style="max-width:100%; max-height:98vh;" width=640 height=480></canvas>
 </div>
 
 <div style="font-size: 200%">
@@ -54,6 +52,7 @@
 {% block footer %}
 
 <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
+<script>console.log({version: '{{version}}' });</script>
 <script src="static/clientside.js?v={{version}}"></script>
 
 {% end %}
