--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -12,15 +12,13 @@
 
 
 {% block content %}
-<div style="position:relative;">
-  <div id="capture">
-    <video style="width:50px; position:absolute;" controls autoplay muted playsinline></video>
-    <canvas style="display: none" width={{width_height[0]}} height={{width_height[1]}}></canvas>
-    <button style="position:absolute; bottom:2px; left:2px;" class="nextCamera"><i class="fas fa-video"></i></button>
-  </div>
-  <div id="visualization">
-    <canvas style="max-width:100%; max-height:98vh;" width=640 height=480></canvas>
-  </div>
+<div id="capture">
+  <video controls autoplay muted playsinline></video>
+  <button class="nextCamera"><i class="fas fa-video"></i></button>
+  <canvas style="display: none" width={{width_height[0]}} height={{width_height[1]}}></canvas>
+</div>
+<div id="visualization">
+  <canvas style="max-width:100%; max-height:98vh;" width=640 height=480></canvas>
 </div>
 
 <div style="font-size: 200%">
