--- a/openpifpafwebdemo/base.html
+++ b/openpifpafwebdemo/base.html
@@ -28,6 +28,7 @@
             <br />
             Copyright 2019, <a href="https://www.epfl.ch/labs/vita/">VITA lab at EPFL</a>.<br />
             <a href="//www.epfl.ch/about/overview/overview/regulations-and-guidelines/">EPFL Legal</a>.<br />
+            <small style="color:#ccc;">v{{version}}</small><br />
             {% block footer %}{% end %}
             <!-- This is v{{version}}. -->
         </footer>
