add screen capture

--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -15,6 +15,7 @@
 <div id="capture">
   <video controls autoplay muted playsinline></video>
   <button class="nextCamera"><i class="fas fa-video"></i></button>
+  <button class="screenCapture"><i class="fas fa-desktop"></i></button>
   <canvas style="display: none" width={{width_height[0]}} height={{width_height[1]}}></canvas>
 </div>
 <div id="visualization">
