implement server-side-event feed

--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -25,6 +25,9 @@
 <div style="font-size: 200%">
   FPS = <em><span id="fps">0</span></em>
 </div>
+<div>
+  Feed: <a id="feedlink"></a>
+</div>
 {% end %}
 
 
