feed link update

--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -25,8 +25,8 @@
 <div style="font-size: 200%">
   FPS = <em><span id="fps">0</span></em>
 </div>
-<div>
-  Feed: <a id="feedlink"></a>
+<div class="feedlink">
+  Server-sent event feed: <a id="feedlink"></a>
 </div>
 {% end %}
 
