--- a/openpifpafwebdemo/base.html
+++ b/openpifpafwebdemo/base.html
@@ -23,10 +23,10 @@
         </main>
 
         <footer>
-            <a href="https://github.com/vita-epfl/openpifpafwebdemo">Project on Github</a>.
+            <a href="https://github.com/openpifpaf/openpifpafwebdemo">Project on Github</a>. 
             Created by <a href="https://twitter.com/svenkreiss">@svenkreiss</a>.<br />
             <br />
-            Copyright 2019-2021. <a href="https://www.epfl.ch/labs/vita/">VITA lab at EPFL</a>.<br />
+            Copyright 2019-2021. Created at <a href="https://www.epfl.ch/labs/vita/">VITA lab at EPFL</a>.<br />
             <a href="//www.epfl.ch/about/overview/overview/regulations-and-guidelines/">EPFL Legal</a>.<br />
             <small style="color:#ccc;">v{{version}}</small><br />
             {% block footer %}{% end %}
@@ -41,7 +41,7 @@
             gtag('js', new Date());
 
             gtag('config', '{{google_analytics}}', { 'anonymize_ip': true });
-            </script>
+        </script>
         {% end %}
     </body>
 </html>
