--- a/openpifpafwebdemo/index.html
+++ b/openpifpafwebdemo/index.html
@@ -26,18 +26,13 @@
   FPS = <em><span id="fps">0</span></em>
 </div>
 <div class="feedlink">
-  Server-sent event feed: <a id="feedlink"></a>
+  Server-sent event feed: <a id="feedlink"></a>.<br />
+  <a href="https://openpifpaf.github.io/openpifpafwebdemo/">Client-side demo</a>.
 </div>
 {% end %}
 
 
-{% block log %}
-{% end %}
-
-
 {% block footer %}
-
 <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
 <script src="static/frontend.js?v={{version}}"></script>
-
 {% end %}
